--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,32 @@
+html, body {
+    color: #69789a;
+}
 #app {
     font-family: 'Avenir', Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50;
+    /*text-align: center;*/
     margin-top: 60px;
   }
+ul, li {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+button {
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.app-container{
+    display: flex;
+}
+.events-editor {
+    margin-left: 40px;
+}
+input {
+    padding: 7px 10px;
+    border: 1px solid lightgray;
+    border-radius: 3px;
+}
